--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 	<h3>Todo</h3>
     <ul id="incompleteTasks">
       <li>
-	    <input type="checkbox">
-		<label class="task">Pay Bills</label>
+	    <input type="checkbox"><label class="task">Pay Bills</label>
 		<input type="text" class="task">
 		<button class="edit">Edit</button>
 		<button class="delete">
@@ -33,9 +32,7 @@
 		<label class="task">Go Shopping</label>
 		<input type="text" value="Go Shopping" class="task">
 		<button class="edit">Save</button>
-		<button class="delete">
-		  <img src="./remove.svg">
-		</button>
+		<button class="delete"><img src="./remove.svg"></button>
 	  </li>
     </ul>
 	<h3>Completed</h3>
@@ -45,9 +42,7 @@
 		<label class="task">See the Doctor</label>
 		<input type="text" class="task">
 		<button class="edit">Edit</button>
-		<button class="delete">
-		  <img src="./remove.svg">
-		</button>
+		<button class="delete"><img src="./remove.svg"></button>
       </li>
     </ul>
   </div>
