--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Todo App</title>
@@ -6,20 +5,20 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="header">
 	  <img src="./eisenhower-matrix.jpg">
-	  <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+	  <a class="info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <div class="form-items">
+      <p id="form-element">
 	  <label for="new-task">Add Item</label>
-	    <div class="task-row-wrapper">
+	    <div class="task-items_wrapper">
 	      <input id="new-task" class="task" type="text">
 		  <button>Add</button>
 	    </div>
       </p>
 	  <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="form-task_incomplete">
         <li>
 	      <input type="checkbox"><label class="task">Pay Bills</label>
 		  <input type="text" class="task">
@@ -35,7 +34,7 @@
 	    </li>
       </ul>
 	  <h3>Completed</h3>
-	  <ul id="completed-tasks">
+	  <ul id="form-task_completed">
 	    <li>
 	      <input type="checkbox" checked>
 		  <label class="task">See the Doctor</label>
