--- a/index.html
+++ b/index.html
@@ -6,45 +6,51 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="header">
+    <header class="header">
 	  <img src="./eisenhower-matrix.jpg">
 	  <a class="info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="form-items">
-      <p id="form-element">
-	  <label for="new-task">Add Item</label>
-	    <div class="task-items_wrapper">
-	      <input id="new-task" class="task" type="text">
-		  <button>Add</button>
-	    </div>
-      </p>
-	  <h3>Todo</h3>
-      <ul id="form-task_incomplete">
-        <li>
-	      <input type="checkbox"><label class="task">Pay Bills</label>
-		  <input type="text" class="task">
-		  <button class="edit">Edit</button>
-		  <button class="delete"><img src="./remove.svg"></button>
-	    </li>
-        <li class="editMode">
-	      <input type="checkbox">
-		  <label class="task">Go Shopping</label>
-		  <input type="text" value="Go Shopping" class="task">
-		  <button class="edit">Save</button>
-		  <button class="delete"><img src="./remove.svg"></button>
-	    </li>
-      </ul>
-	  <h3>Completed</h3>
-	  <ul id="form-task_completed">
-	    <li>
-	      <input type="checkbox" checked>
-		  <label class="task">See the Doctor</label>
-		  <input type="text" class="task">
-		  <button class="edit">Edit</button>
-		  <button class="delete"><img src="./remove.svg"></button>
-        </li>
-      </ul>
-    </div>
+    </header>
+    <main class="form-items">
+      <article>
+	    <p id="form-element">
+	    <label for="new-task">Add Item</label>
+	      <div class="task-items_wrapper">
+	        <input id="new-task" class="task" type="text">
+		    <button>Add</button>
+	      </div>
+        </p>
+	  <section>
+	    <h3>Todo</h3>
+        <ul id="form-task_incomplete">
+          <li>
+	        <input type="checkbox"><label class="task">Pay Bills</label>
+		    <input type="text" class="task">
+		    <button class="edit">Edit</button>
+		    <button class="delete"><img src="./remove.svg"></button>
+	      </li>
+          <li class="editMode">
+	        <input type="checkbox">
+		    <label class="task">Go Shopping</label>
+		    <input type="text" value="Go Shopping" class="task">
+		    <button class="edit">Save</button>
+		    <button class="delete"><img src="./remove.svg"></button>
+	      </li>
+        </ul>
+	  </section>
+	  <section>
+	    <h3>Completed</h3>
+	    <ul id="form-task_completed">
+	      <li>
+	        <input type="checkbox" checked>
+		    <label class="task">See the Doctor</label>
+		    <input type="text" class="task">
+		    <button class="edit">Edit</button>
+		    <button class="delete"><img src="./remove.svg"></button>
+          </li>
+        </ul>
+	  </section>
+	  </article>
+    </main>
   <script SRC="app.js"></script>
   </body>
 </html>
