--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   </head>
   <body>
     <header class="header">
-	  <img src="./eisenhower-matrix.jpg">
+	  <img src="./eisenhower-matrix.jpg" alt="matrix">
 	  <a class="info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="form-items">
       <article>
 	    <p id="form-element">
 	    <label for="new-task">Add Item</label>
-	      <div class="task-items_wrapper">
+	      <section class="task-items_wrapper">
 	        <input id="new-task" class="task" type="text">
 		    <button>Add</button>
-	      </div>
+	      </section>
         </p>
 	  <section>
 	    <h3>Todo</h3>
@@ -26,14 +26,14 @@
 	        <input type="checkbox"><label class="task">Pay Bills</label>
 		    <input type="text" class="task">
 		    <button class="edit">Edit</button>
-		    <button class="delete"><img src="./remove.svg"></button>
+		    <button class="delete"><img src="./remove.svg" alt="delete"></button>
 	      </li>
           <li class="editMode">
 	        <input type="checkbox">
 		    <label class="task">Go Shopping</label>
 		    <input type="text" value="Go Shopping" class="task">
 		    <button class="edit">Save</button>
-		    <button class="delete"><img src="./remove.svg"></button>
+		    <button class="delete"><img src="./remove.svg" alt="delete"></button>
 	      </li>
         </ul>
 	  </section>
@@ -45,7 +45,7 @@
 		    <label class="task">See the Doctor</label>
 		    <input type="text" class="task">
 		    <button class="edit">Edit</button>
-		    <button class="delete"><img src="./remove.svg"></button>
+		    <button class="delete"><img src="./remove.svg" alt="delete"></button>
           </li>
         </ul>
 	  </section>
