--- a/index.html
+++ b/index.html
@@ -15,37 +15,37 @@
 	    <p id="form-element">
 	    <label for="new-task">Add Item</label>
 	      <section class="task-items_wrapper">
-	        <input id="new-task" class="task" type="text">
-		    <button>Add</button>
+	        <input id="new-task" class="menu-task__input" type="text">
+		    <button class="menu-task__button">Add</button>
 	      </section>
         </p>
 	  <section>
 	    <h3>Todo</h3>
-        <ul id="form-task_incomplete">
-          <li>
-	        <input type="checkbox"><label class="task">Pay Bills</label>
-		    <input type="text" class="task">
-		    <button class="edit">Edit</button>
-		    <button class="delete"><img src="./remove.svg" alt="delete"></button>
+        <ul id="form-task_incomplete" class="menu">
+          <li class="menu__item">
+	        <input type="checkbox"><label class="menu-task__input">Pay Bills</label>
+		    <input type="text" class="menu-task__input">
+		    <button class="menu-task__buttonEdit">Edit</button>
+		    <button class="menu-task__buttonDelete"><img src="./remove.svg" alt="delete"></button>
 	      </li>
-          <li class="editMode">
+          <li class="menu__item">
 	        <input type="checkbox">
-		    <label class="task">Go Shopping</label>
-		    <input type="text" value="Go Shopping" class="task">
-		    <button class="edit">Save</button>
-		    <button class="delete"><img src="./remove.svg" alt="delete"></button>
+		    <label class="menu-task__input">Go Shopping</label>
+		    <input type="text" value="Go Shopping" class="menu-task__input">
+		    <button class="menu-task__buttonEdit">Save</button>
+		    <button class="menu-task__buttonDelete"><img src="./remove.svg" alt="delete"></button>
 	      </li>
         </ul>
 	  </section>
 	  <section>
 	    <h3>Completed</h3>
-	    <ul id="form-task_completed">
-	      <li>
+	    <ul id="form-task_completed" class="menu">
+	      <li class="menu__item">
 	        <input type="checkbox" checked>
-		    <label class="task">See the Doctor</label>
-		    <input type="text" class="task">
-		    <button class="edit">Edit</button>
-		    <button class="delete"><img src="./remove.svg" alt="delete"></button>
+		    <label class="menu-task__input">See the Doctor</label>
+		    <input type="text" class="menu-task__input">
+		    <button class="menu-task__buttonEdit">Edit</button>
+		    <button class="menu-task__buttonDelete"><img src="./remove.svg" alt="delete"></button>
           </li>
         </ul>
 	  </section>
