--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <main class="form-items">
       <article>
 	    <p id="form-element">
-	    <label for="new-task">Add Item</label>
+	    <label for="form-task">Add Item</label>
 	      <section class="task-items_wrapper">
-	        <input id="new-task" class="menu-task__input" type="text">
-		    <button class="menu-task__button">Add</button>
+	        <input id="form-task" class="menu-task__input" type="text">
+		    <button>Add</button>
 	      </section>
         </p>
 	  <section>
@@ -28,7 +28,7 @@
 		    <button class="menu-task__buttonEdit">Edit</button>
 		    <button class="menu-task__buttonDelete"><img src="./remove.svg" alt="delete"></button>
 	      </li>
-          <li class="menu__item">
+          <li class="editMode">
 	        <input type="checkbox">
 		    <label class="menu-task__input">Go Shopping</label>
 		    <input type="text" value="Go Shopping" class="menu-task__input">
